implemented /api/profile/updateprofile endpoint
- added .api/profile route to the base application

- added updateprofile controller to the profilecountroller.ts file

- added jsdocs and swaggerdocs to all relevant components

- tested swaggerdocs locally

- update swaggerdocs in authentication routes so that descriptions are in english and examples are in chinese

- updated request and response types in the drontend and backend

- pending integration/testing for the endpoint
